--- a/paginas/acercadenosotros.html
+++ b/paginas/acercadenosotros.html
@@ -100,11 +100,11 @@
         <div class="row pt-5 text-light d-flex justify-content-center">
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 footer-center_caja">
                 <h5>Ferretería de Todo Uno</h5>
-                <p>Cali, Colombia</p>
+                <p class="textofooter">Cali, Colombia</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 fs-4 footer-center_caja">
                 <h5>WhatsApp:</h5>
-                <p>(+57) 315 553 8701</p>
+                <p class="textofooter">(+57) 315 553 8701</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 footer-center_caja">
                 <h5>Escríbenos:</h5>
