--- a/paginas/contactenos.html
+++ b/paginas/contactenos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferretería de Todo Uno - Contáctenos</title>
     <link rel="shortcut icon" href="../Imagenes/FDTodo.ico">
     <script src="https://kit.fontawesome.com/2914e866c9.js" crossorigin="anonymous"></script>
@@ -87,11 +87,11 @@
         <div class="row pt-5 text-light d-flex justify-content-center">
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 footer-center_caja">
                 <h5>Ferretería de Todo Uno</h5>
-                <p>Cali, Colombia</p>
+                <p class="textofooter">Cali, Colombia</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 fs-4 footer-center_caja">
                 <h5>WhatsApp:</h5>
-                <p>(+57) 315 553 8701</p>
+                <p class="textofooter">(+57) 315 553 8701</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 footer-center_caja">
                 <h5>Escríbenos:</h5>
