--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
     <div class="container footer-center">
         <div class="row pt-5 text-light d-flex justify-content-center">
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 footer-center_caja">
-                <h5>Ferretería de Todo Uno</h5>
+                <h5 class="titulofooter">Ferretería de Todo Uno</h5>
                 <p class="textofooter">Cali, Colombia</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 fs-4 footer-center_caja">
-                <h5>WhatsApp:</h5>
+                <h5 class="titulofooter">WhatsApp:</h5>
                 <p class="textofooter">(+57) 315 553 8701</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 footer-center_caja">
-                <h5>Escríbenos:</h5>
+                <h5 class="titulofooter">Escríbenos:</h5>
                 <a href="#">ferreteriadetodo@hotmail.com</a>
             </div>
         </div>
