--- a/paginas/acercadenosotros.html
+++ b/paginas/acercadenosotros.html
@@ -55,7 +55,7 @@
         <h1> Acerca de Nosotros </h1>
     </div>
     
-    <div class="contenedoracerca">
+    <div class="contenedoracerca col-sm-12 col-md-12 col-lg-6 col-xxl-6">
     <div class="textoacerca"> 
         <p> Empresa vallecaucana líder en la distribución de:
             <br>
