ultimos cambios preentrega

--- a/paginas/materialesdeconstruccion.html
+++ b/paginas/materialesdeconstruccion.html
@@ -54,7 +54,7 @@
 <div class="titulogeneral">
     <h1> Materiales de Construcción </h1>
 </div>
-<div class="textomatcons">
+<div class="textomateriales">
     <p>Manejamos todo tipo de materiales para construcción, como por ejemplo: 
         <br>    
         metro de arena, ladrillo, grava, balastro, etc.
