--- a/paginas/acercadenosotros.html
+++ b/paginas/acercadenosotros.html
@@ -55,7 +55,7 @@
         <h1> Acerca de Nosotros </h1>
     </div>
     
-    <div class="contenedoracerca col-sm-12 col-md-12 col-lg-6 col-xxl-6">
+    <div class="contenedoracerca">
     <div class="textoacerca"> 
         <p> Empresa vallecaucana líder en la distribución de:
             <br>
@@ -99,15 +99,15 @@
     <div class="container footer-center">
         <div class="row pt-5 text-light d-flex justify-content-center">
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 footer-center_caja">
-                <h5 class="titulofooter">Ferretería de Todo Uno</h5>
-                <p class="textofooter">Cali, Colombia</p>
+                <h5>Ferretería de Todo Uno</h5>
+                <p>Cali, Colombia</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 fs-4 footer-center_caja">
-                <h5 class="titulofooter">WhatsApp:</h5>
-                <p class="textofooter">(+57) 315 553 8701</p>
+                <h5>WhatsApp:</h5>
+                <p>(+57) 315 553 8701</p>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4 col-xxl-4 footer-center_caja">
-                <h5 class="titulofooter">Escríbenos:</h5>
+                <h5>Escríbenos:</h5>
                 <a href="#">ferreteriadetodo@hotmail.com</a>
             </div>
         </div>
